<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/backgroundColor"
    android:fillViewport="false">
    <RelativeLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="in.vivek.popularmovies.DetailActivity.DetailFragment"
        >

        <ImageView
            android:layout_width="@dimen/poster_width"
            android:layout_height="@dimen/poster_height"
            android:id="@+id/poster"
            android:foregroundGravity="center_vertical|center_horizontal"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/movieposter" />
        <TextView android:text="@string/title"
            android:layout_width="wrap_content"
            android:id="@+id/orgTitle"
            android:layout_height="wrap_content"
            android:layout_below="@+id/poster"
            android:layout_centerHorizontal="true"
            android:textColor="@color/titleColor"
            android:layout_marginTop="30dp"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:textSize="20sp"

            />

        <TextView android:layout_width="wrap_content"
            android:id="@+id/orgLang"
            android:layout_height="wrap_content"
            android:layout_below="@+id/orgTitle"
            android:textColor="@color/textColor"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:layout_marginTop="30dp"
            android:textSize="12sp"
            android:text="@string/orgtitle" />

        <TextView android:layout_width="wrap_content"
            android:id="@+id/relDate"
            android:layout_height="wrap_content"
            android:layout_below="@+id/orgLang"
            android:textColor="#00B8D4"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:textSize="12sp"
            android:text="@string/reldate"
            />

        <TextView android:layout_width="wrap_content"
            android:id="@+id/popularity"
            android:layout_height="wrap_content"
            android:layout_below="@+id/relDate"
            android:textColor="@color/textColor"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:textSize="12sp"
            android:text="@string/popularity"/>

            <TextView android:layout_width="wrap_content"
                android:id="@+id/voteAvg"
                android:layout_height="wrap_content"
                android:layout_below="@+id/popularity"
                android:textColor="@color/textColor"
                android:layout_marginTop="25dp"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:textSize="12sp"
                android:text="@string/voteavg"/>

            <TextView android:layout_width="wrap_content"
                android:id="@+id/overview"
                android:layout_height="wrap_content"
                android:layout_below="@+id/voteAvg"
                android:textColor="@color/textColor"
                android:layout_marginTop="25dp"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:textSize="12sp"
                android:text="@string/overview" />

    </RelativeLayout>
</ScrollView>
